--- a/css/offer.css
+++ b/css/offer.css
@@ -1,6 +1,4 @@
-/* ============================================
-   VARIABLES GLOBALES
-   ============================================ */
+/* offer  */
 :root {
   --primary-color: #40afa7;
   --secondary-color: #2d8b85;
