--- a/css/header.css
+++ b/css/header.css
@@ -270,7 +270,7 @@ body {
     display: block;
     width: 100%;
     padding: 12px 20px;
-    color: var(--text-primary);
+    /* color: var(--text-primary); */
     text-decoration: none;
     font-weight: 500;
     transition: all 0.2s ease;
@@ -311,6 +311,7 @@ body {
     align-items: center;
     justify-content: center;
     gap: 6px;
+    color: #171625;
 }
 
 /* ====== MENU MOBILE ====== */
