--- a/css/headerdeco.css
+++ b/css/headerdeco.css
@@ -246,11 +246,12 @@ body {
     background: linear-gradient(135deg, #38A099 0%, #2B4F82 50%, #171625 100%);
     transform: translateY(-4px); /* le bouton “s’élève” */
     box-shadow: var(--shadow-sm);
+    color: white;
 }
 
 .btn-connexion{
     background: var(--primary-gradient);
-    color: var(--text-white);
+    color: white;
     padding: 12px 24px;
     font-size: 1rem;
     font-weight: 600;
@@ -271,6 +272,7 @@ cubic-bezier(0.4, 0, 0.2, 1);
 
 .btn-success:hover {
     background: linear-gradient(135deg, #229954 0%, #27ae60 50%, #2ecc71 100%);
+    color: white;
 }
 
 /* Utilitaire pour margin (utilisé avec style inline) */
